--- a/.babelrc.json
+++ b/.babelrc.json
@@ -5,6 +5,7 @@
   ],
 
   "plugins": [
-    "babel-plugin-styled-components"
+    "babel-plugin-styled-components",
+    "@babel/plugin-syntax-jsx"
   ]
 }
