--- a/.babelrc.json
+++ b/.babelrc.json
@@ -6,6 +6,7 @@
 
   "plugins": [
     "babel-plugin-styled-components",
-    "@babel/plugin-syntax-jsx"
+    "@babel/plugin-syntax-jsx",
+    "@babel/plugin-transform-runtime"
   ]
 }
